[tool.poetry]
name = "temporalloop"
version = "0.2.0"
description = ""
authors = ["ant31 <2t.antoine@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
tempoloop = 'temporalloop.main:main'

[tool.poetry.dependencies]
python = ">=3.12,<4"
temporalio = {extras = ["opentelemetry"], version = "*"}
asyncio = "*"
pydantic = "*"
sentry-sdk = "*"
click = "*"
pyyaml = "*"
pydantic-settings = "*"
ant31box = {git = "https://github.com/ant31/ant31box", branch="main", extras = ["all"]}

[tool.poetry.group.dev.dependencies]
black = "*"
ipython = "*"
pylint = "*"
pyre-check = "*"
types-requests = "*"
isort = "*"
pytest = "*"
coverage = "*"
pytest-cov = "*"
bumpversion = "*"
pytest-ordering = "*"
pytest-asyncio = "*"
pyright = "*"
ruff = "*"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.pytest]
testpaths = "tests/"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
