[project]
name = "temporalloop"
version = "0.2.1"
description = ""
authors = [{ name = "ant31", email = "2t.antoine@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "temporalio[opentelemetry]",
    "asyncio",
    "pydantic",
    "sentry-sdk",
    "click",
    "pyyaml",
    "pydantic-settings",
    "ant31box[all] >= 0.2.8" ,
]

[project.scripts]
tempoloop = "temporalloop.main:main"

[dependency-groups]
dev = [
    "black",
    "ipython",
    "pylint",
    "pyre-check",
    "types-requests",
    "isort",
    "pytest",
    "coverage",
    "pytest-cov",
    "bumpversion",
    "pytest-ordering",
    "pytest-asyncio",
    "pyright",
    "ruff",
    "bump-my-version>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.pytest]
testpaths = "tests/"

[tool.hatch.metadata]
allow-direct-references = true


[tool.bumpversion]
current_version = "0.2.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = 'temporalloop/__init__.py'
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
regex = true
